# GnuAsm_labs

./: ReadMe.md
lab0/: ToDo.md  report.md
lab0/src/: ex5.ipynb
lab1/: CMakeLists.txt  report.md
lab1/src/: ex1.cpp  ex2.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
lab2/: CMakeLists.txt  ToDo.md  report.md
lab2/src/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp
lab4/: CMakeLists.txt  ToDo.md  report.md
lab4/src/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
lab5/: CMakeLists.txt  ToDo.md  report.md
lab5/src/: ex1.s  ex2.s  ex3.s
